--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 0.8.1
-tag_name = "{new_version}"
+tag_name = {new_version}
 
 [bumpversion:file:embyupdater/version.py]
 
