--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+pyindist/
+pyinbuild/
 
 # Installer logs
 pip-log.txt
